fix: z-index issue

--- a/src/assets/styles/pages/navbar/index.pcss
+++ b/src/assets/styles/pages/navbar/index.pcss
@@ -1,5 +1,5 @@
 .view-navbar {
-   @apply w-full px-6 py-2 z-5
+   @apply w-full px-6 py-2 z-2
    flex items-center
    bg-default-elevated border border-transparent border-b-black/10
    sticky top-0 left-0;
